footer hack to prevent overflow

--- a/app/views/css/main.sass
+++ b/app/views/css/main.sass
@@ -146,6 +146,7 @@ footer
   margin-top: 25px
   padding: 20px 0 20px
   text-align: center
+  overflow: hidden
 
 //menu before content
 #menu_area 
